--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(build_dnorm_dat)
 export(build_dt_dat)
 export(build_pnorm_dat)
 export(build_qnorm_dat)
+export(build_ribbons)
 export(build_tail_dat)
 export(ggplot_confints)
 export(line_point_slope)
