added normal density curve with confidence interval plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(build_pnorm_dat)
 export(build_qnorm_dat)
 export(build_ribbons)
 export(build_tail_dat)
+export(gg_norm_conf_int)
 export(ggplot_confints)
 export(line_point_slope)
 export(norm_cdf_plot)
@@ -19,3 +20,4 @@ export(sample_standard_error)
 export(seed_pilfer_simulator)
 export(simulated_confidence_intervals_of_mean)
 import(ggplot2)
+import(latex2exp)
