getting ready for the week

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,23 +2,29 @@
 
 export(build_dnorm_dat)
 export(build_dt_dat)
+export(build_one_way_data)
+export(build_one_way_model)
 export(build_pnorm_dat)
 export(build_qnorm_dat)
 export(build_ribbons)
 export(build_tail_dat)
+export(build_two_way_model)
 export(calc_ms)
 export(calc_ss)
 export(gg_norm_conf_int)
 export(ggplot_confints)
 export(line_point_slope)
+export(means_density_boxplot)
 export(mk_ss_data)
 export(norm_cdf_plot)
 export(norm_density_plot)
 export(norm_quantile_plot)
+export(normalize)
 export(plot_anova_ssb)
 export(plot_anova_sst)
 export(plot_anova_ssw)
 export(plot_norm_tails)
+export(plot_one_way_model)
 export(plot_resids)
 export(plot_t_dist)
 export(plot_t_tails)
